# hekate

./: .gitignore  AGENTs.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/: ARCHITECTURE.md  FIXs.md  INSTALL.md  README.md  USAGE.md
docs/archive/: AGENTs-supervisor-based.md
docs/plans/: 2026-01-28-multi-layer-ai-agent-system.md  2026-01-29-hooks-based-architecture.md  2026-01-29-phase1-implementation.md  2026-01-30-plugin-conversion-design.md
hooks/: hooks.json  posttooluse_complete_task.py  posttooluse_memory.py  posttooluse_metrics.py  posttooluse_spawn_agents.py  posttooluse_track_outcome.py  posttooluse_verify_prefetch.py  pretooluse_memory.py  pretooluse_router.py  sessionstart_init.py
hooks/PostToolUse/: memory.py
hooks/PreToolUse/: memory.py  verify_inject.py
hooks/UserPromptSubmit/: decompose.py
scripts/: hekate-analyze.py  hekate-dashboard.py  init-redis.sh  install-hooks.sh  redis-cleanup.sh  setup-prerequisites.sh
skills/beads-tools/: SKILL.md
skills/hekate-agent-workflow/: SKILL.md
skills/hekate-monitoring/: SKILL.md
skills/redis-cli/: SKILL.md
src/hekate/: .env.example  __init__.py  agent.py  beads.py  config.yaml  main.py  quota.py  requirements.txt  router.py  supervisor.py  verifier.py
src/tests/: test_agent.py  test_beads.py  test_config.py  test_integration.py  test_quota.py  test_router.py  test_supervisor.py  test_verifier.py
